--- a/css/layout.css
+++ b/css/layout.css
@@ -3,8 +3,8 @@
 .app-container {
     display: grid;
     grid-template-areas:
-        "sidebar main"
-        "player player";
+        'sidebar main'
+        'player player';
     grid-template-columns: 280px 1fr;
     grid-template-rows: 1fr 72px;
     height: 100vh;
@@ -25,6 +25,10 @@
 
 .sidebar-header {
     margin-bottom: var(--spacing-xl);
+}
+
+.logo {
+    cursor: pointer;
 }
 
 .logo i {
