Complete recent menu & view as function + upload user's avatar.

--- a/css/layout.css
+++ b/css/layout.css
@@ -69,6 +69,7 @@
 
 /* Main Content */
 .main-content {
+    position: relative;
     grid-area: main;
     background: linear-gradient(
         to bottom,
