--- a/css/reset.css
+++ b/css/reset.css
@@ -8,11 +8,12 @@
 html,
 body {
     height: 100%;
-    font-family: "Circular", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    font-family: 'Circular', -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     background-color: var(--bg-primary);
     color: var(--text-primary);
     overflow: hidden;
+    user-select: none;
 }
 
 button {
